<resources>
    <string name="app_name">
  Фермерский \n
  продукт \n
    </string>

    <string name="sample_name">Колбас Мяснов</string>
    <string name="account_info">Информация об аккаунте</string>
    <string name="account_orders">Мои заказы</string>
    <string name="account_address">Адреса доставки</string>
    <string name="account_sign_out">Выйти из аккаунта</string>
    <string name="sample_email">example@google.com</string>
    <string name="sample_phone_number">+7(999)999–99–99</string>
    <string name="personal_details">Личные данные</string>
    <string name="acc_address">Адреса доставки</string>
    <string name="address_city">Город</string>
    <string name="sample_city">Sample city</string>
    <string name="address_entrance">Подъезд</string>
    <string name="address_flat">Квартира</string>
    <string name="address_floor">Этаж</string>
    <string name="address_street">Улица</string>
    <string name="sample_street">Sample street</string>
    <string name="address_sample_entrance">Sample entrance</string>
    <string name="address_sample_floor">Sample floor</string>
    <string name="address_sample_flat">Sample flat</string>
    <string name="hint_city">Выберите город</string>
    <string name="hint_street">Введите улицу</string>
    <string name="hint_entrance">Подъезд</string>
    <string name="hint_floor">Этаж</string>
    <string name="hint_flat">Квартира</string>
    <string name="acc_new_address">Новый адрес</string>
    <string name="order_number">Заказ #</string>
    <string name="order_placed">Создан</string>
    <string name="order_items">Позиций:</string>
    <string name="order_cost">Итого:</string>
    <string name="order_item_name">Курочка</string>
    <string name="order_item_total">Стоимость</string>
    <string name="order_item_count">Количество</string>
    <string name="cart">Корзина</string>
    <string name="checkout_btn">Далее</string>
    <string name="cart_sample_name">Копчёности</string>
    <string name="sample_cost">250</string>
    <string name="sample_weight">2,5 – 3 кг</string>
    <string name="sample_count">3</string>
    <string name="order_success">Заказ создан</string>
    <string name="success_order">Ваш заказ успешно создан</string>
    <string name="delivery_time">Мы свяжемся с вами за 1–1,5 часа до доставки</string>
    <string name="shop">Фермерские продукты</string>
    <string name="sign_google">Войти с Google-аккаунтом</string>
    <string name="unauthorized">Продолжить без авторизации</string>
    <string name="title_shop">Магазин</string>
    <string name="title_cart">Корзина</string>
    <string name="title_account">Аккаунт</string>
    <string name="save_btn">Сохранить</string>
    <string name="et_name">Введите имя</string>
    <string name="hint_house">Введите номер дома</string>
    <string name="address_house">Номер дома</string>
    <string name="sample_house">Sample house</string>
    <string name="button_choose_delivery_date">Выбрать дату доставки</string>
    <string name="confirm_button">Создать заказ</string>
    <string name="primary_switch_text">Установить как основной</string>
    <string name="add_address_button">Добавить адрес</string>
    <string name="shop_item_cost">250</string>
    <string name="shop_item_weight">за кг</string>
    <string name="shop_item_average_weight">Примерный вес</string>
    <string name="edit_shop_item">Редактирование товара</string>
    <string name="sample_summary">5800</string>
    <string name="sample_date">27.01.2023</string>
    <string name="sample_date_text">Актуальная дата доставки</string>
    <string name="admin_panel">Панель администратора</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="change_delivery_date_sample">Изменить дату доставки товаров</string>
    <string name="orders_to_delivery">Заказы на доставку</string>
    <string name="item_cost_per">руб за кг</string>
    <string name="average_weight">Примерный вес</string>
    <string name="item_weight">15</string>
    <string name="weight_measurement">кг</string>
    <string name="item_title_sample">Название товара</string>
    <string name="item_cost_sample">Стоимость</string>
    <string name="address_primary">Основной</string>
    <string name="cart_disclaimer">*Стоимость предварительная, так как вес каждой единицы товара индивидуальный</string>
    <string name="roubles">рублей</string>
    <string name="zero">0</string>
    <string name="delivery_date_sample">Дата доставки</string>
    <string name="to_cart_button">В корзину</string>
    <string name="confirm_order">Подтверждение заказа</string>
    <string name="description_sample">Описание</string>
    <string name="add_photo">Добавить фото</string>
    <string name="sample_description">How often do researchers look for the right survey respondents, either for a market research study or an existing survey in the field? </string>
    <string name="tv_description">Описание</string>
    <string name="additional_services_sample">Добавить дополнительную услугу</string>
    <string name="additional_title_sample">Название услуги</string>
    <string name="new_supply">Новый товар</string>
  <string name="city_rnd">Ростов-на-Дону</string>
  <string name="city_bataysk">Батайск</string>
  <string name="city_aksay">Аксай</string>
    <string name="go_to_button">Выехал</string>
    <string name="complete_button">Доставлен</string>
    <string name="user_agreement">Я прочитал и согласен с <a href="http://drive.google.com/drive/folders/1upBJFhQLntlTk-mqbT0HxI9AuOoPZ5zJ?usp=sharing">пользовательским соглашением и
      политикой конфиденциальности</a></string>
    <string name="min_count">Минимальный заказ от 2 шт.</string>
    <string name="feedback_text">Обратная связь</string>
    <string name="feedback_warning"><![CDATA[Детали по заказу можно уточнить во вкладке Аккаунт - Обратная связь]]></string>

</resources>