<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background">

    <TextView
        android:id="@+id/tvName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/sample_name"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:autoLink="phone"
        android:text="@string/sample_phone_number"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvName" />

    <TextView
        android:id="@+id/tvCitySample"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/address_city"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPhone" />


    <TextView
        android:id="@+id/tvCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/sample_city"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCitySample" />

    <TextView
        android:id="@+id/tvStreetSample"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/address_street"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCity" />

    <TextView
        android:id="@+id/tvStreet"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/sample_street"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvStreetSample" />

    <TextView
        android:id="@+id/tvHouseSample"
        android:layout_width="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_height="wrap_content"
        android:text="@string/address_house"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvStreet" />

    <TextView
        android:id="@+id/tvHouse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/sample_house"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHouseSample" />


    <TextView
        android:id="@+id/tvEntranceSample"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address_entrance"
        android:layout_marginStart="10dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHouse" />

    <TextView
        android:id="@+id/tvFloorSample"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"

        android:text="@string/address_floor"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/tvEntranceSample"
        app:layout_constraintTop_toBottomOf="@id/tvHouse" />

    <TextView
        android:id="@+id/tvFlatSample"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:text="@string/address_flat"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/tvFloorSample"
        app:layout_constraintTop_toBottomOf="@+id/tvHouse" />


    <TextView
        android:id="@+id/tvEntrance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/address_sample_entrance"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEntranceSample" />

    <TextView
        android:id="@+id/tvFloor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address_sample_floor"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/tvFloorSample"
        app:layout_constraintTop_toBottomOf="@+id/tvFloorSample" />

    <TextView
        android:id="@+id/tvFlat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address_sample_flat"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/tvFlatSample"
        app:layout_constraintTop_toBottomOf="@+id/tvFlatSample" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcViewOrdersToDelivery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFlat" />


</androidx.constraintlayout.widget.ConstraintLayout>