<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="2dp"
    android:paddingTop="4dp"
    android:paddingEnd="2dp"
    android:paddingBottom="4dp"

    >

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/background"
        android:orientation="vertical"
        android:weightSum="10">




        <TextView
            android:id="@+id/tvPrimarySwitch"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/primary_light"
            android:visibility="gone"/>
        <ImageView
            android:id="@+id/editAddressButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/edit_pen"
            android:cropToPadding="true"
            android:padding="7dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="gone"/>
        <ImageView
            android:id="@+id/removeAddressButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/remove"
            android:layout_marginTop="10dp"
            android:cropToPadding="true"
            android:padding="7dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>


        <TextView
            android:id="@+id/tvCitySample"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address_city"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />




        <TextView
            android:id="@+id/tvCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/sample_city"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCitySample" />

        <TextView
            android:id="@+id/tvStreetSample"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address_street"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCity" />

        <TextView
            android:id="@+id/tvStreet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/sample_street"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvStreetSample" />

        <TextView
            android:id="@+id/tvHouseSample"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address_house"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvStreet" />

        <TextView
            android:id="@+id/tvHouse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/sample_house"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvHouseSample" />


        <TextView
            android:id="@+id/tvEntranceSample"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address_entrance"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvHouse" />

        <TextView
            android:id="@+id/tvFloorSample"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:text="@string/address_floor"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/tvEntranceSample"
            app:layout_constraintTop_toBottomOf="@id/tvHouse" />

        <TextView
            android:id="@+id/tvFlatSample"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:text="@string/address_flat"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/tvFloorSample"
            app:layout_constraintTop_toBottomOf="@+id/tvHouse" />


        <TextView
            android:id="@+id/tvEntrance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address_sample_entrance"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvEntranceSample" />

        <TextView
            android:id="@+id/tvFloor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address_sample_floor"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@+id/tvFloorSample"
            app:layout_constraintTop_toBottomOf="@+id/tvFloorSample" />

        <TextView
            android:id="@+id/tvFlat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address_sample_flat"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@+id/tvFlatSample"
            app:layout_constraintTop_toBottomOf="@+id/tvFlatSample" />


        <Button
            android:id="@+id/setPrimaryButton"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/primary_switch_text"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>








    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>